@@ -200,24 +200,18 @@ secure_str(struct ub_result* result)
 static void
 pretty_type(char* s, size_t len, int t)
 {
-	const ldns_rr_descriptor *d = ldns_rr_descript((uint16_t)t);
-	if(d) {
-		snprintf(s, len, "%s", d->_name);
-	} else {
-		snprintf(s, len, "TYPE%d", t);
-	}
+	char* d = ldns_rr_type2str(t);
+	snprintf(s, len, "%s", d);
+	free(d);
 }
 
 /** nice string for class */
 static void
 pretty_class(char* s, size_t len, int c)
 {
-	ldns_lookup_table *cl = ldns_lookup_by_id(ldns_rr_classes, c);
-	if(cl) {
-		snprintf(s, len, "%s", cl->name);
-	} else {
-		snprintf(s, len, "CLASS%d", c);
-	}
+	char* d = ldns_rr_class2str(c);
+	snprintf(s, len, "%s", d);
+	free(d);
 }
 
 /** nice string for rcode */
@@ -333,7 +327,26 @@ pretty_output(char* q, int t, int c, struct ub_result* result, int docname)
 				printf(" has no domain name ptr");
 			else if(t == LDNS_RR_TYPE_MX)
 				printf(" has no mail handler record");
-			else	printf(" has no %s record", tstr);
+			else if(t == LDNS_RR_TYPE_ANY) {
+				ldns_pkt* p = NULL;
+				if(ldns_wire2pkt(&p, result->answer_packet,
+					result->answer_len) == LDNS_STATUS_OK){
+					if(ldns_rr_list_rr_count(
+						ldns_pkt_answer(p)) == 0)
+						printf(" has no records\n");
+					else {
+						printf(" ANY:\n");
+						ldns_rr_list_print(stdout,
+							ldns_pkt_answer(p));
+					}
+				} else {
+					fprintf(stderr, "could not parse "
+						"reply packet to ANY query\n");
+					exit(1);
+				}
+				ldns_pkt_free(p);
+
+			} else	printf(" has no %s record", tstr);
 			printf(" %s\n", secstatus);
 		}
 		/* else: emptiness to indicate no data */
