@@ -142,11 +142,13 @@ ENTRY_END
 STEP 10 CHECK_ANSWER
 ENTRY_BEGIN
 MATCH all
-REPLY QR RD RA SERVFAIL
+; insecure! not bogus! (due to optout)
+REPLY QR RD RA NOERROR
 SECTION QUESTION
 a.z.w.example.      IN AAAA
 SECTION ANSWER
 SECTION AUTHORITY
+example.	3600	IN	SOA	ns1.example. bugs.x.w.example. 1 3600 300 3600000 3600
 SECTION ADDITIONAL
 ENTRY_END
 
